# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: main.yaml
conf/: Cargo.toml  base.yaml
conf/src/: lib.rs
configuration/: base.yaml
domain/: Cargo.toml
domain/src/: error.rs  lib.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
migrations/: 20240428090734_create_subscriptions_table.sql  20240507080836_create_subscription_tokens_table.sql  20240512085456_create_idempotency_table.sql  20240512085534_relax_null_checks.sql  20240512085554_create_newsletter_issues_table.sql  20240512085613_create_issue_delivery_queue_table.sql
pg/: Cargo.toml
pg/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: configuration.rs  lib.rs  main.rs  routes.rs  trace.rs
server/src/domain/: subscriber_name.rs
server/tests/: health.rs  helpers.rs  subscribe.rs
src/: configuration.rs  lib.rs  main.rs  pg.rs
src/pg/: main.rs
stores/: Cargo.toml
stores/src/: main.rs
tests/: health_check.rs  helpers.rs  subscribe.rs
zero2prod/: Cargo.toml
zero2prod/src/: email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs
zero2prod/src/routes/: mod.rs  newsletter.rs  subscriptions.rs
zero2prod/src/routes/admin/newsletter/: post.rs
zero2prod/tests/: health.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
zero2prod/tests/api/: health.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
