[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[[bin]]
path = "src/pg/main.rs"
name = "pg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.82"
config = "0.14.0"
ctrlc = "3.4.4"
reqwest = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
testcontainers = "0.16.3"
testcontainers-modules = { version = "0.4.0", features = [
	"postgres",
	"blocking",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
