[package]
name = "conf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
domain = { path = "../domain" }
anyhow = "1.0.82"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
ctrlc = "3.4.4"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = [
	"postgres",
	"macros",
	"runtime-tokio",
	"uuid",
	"chrono",
	"migrate",
] }
testcontainers = "0.16.3"
testcontainers-modules = { version = "0.4.0", features = [
	"postgres",
	"blocking",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde-envfile = "0.1.0"
serde_yaml = "0.9.34"
serde-aux = "4"
