[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
unicode-segmentation = "1.7.1"
validator = "0.16"
serde_json = "1.0.61"

[dev-dependencies]
claims = "0.7.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
once_cell = "1"
wiremock = "0.5"
