[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg = { path = "../pg" }
actix-web = "4.5.1"
anyhow = "1.0.82"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
reqwest = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = [
	"postgres",
	"macros",
	"runtime-tokio",
	"uuid",
	"chrono",
	"migrate",
] }
testcontainers = "0.16.3"
testcontainers-modules = { version = "0.4.0", features = [
	"postgres",
	"blocking",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
once_cell = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
