[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conf = { path = "../conf" }
domain = { path = "../domain" }
actix-web = "4.5.1"
anyhow = "1.0.82"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = [
	"postgres",
	"macros",
	"runtime-tokio",
	"uuid",
	"chrono",
	"migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1.7.1"
validator = "0.16"
reqwest = { version = "0.11", default-features = false, features = [
	"json",
	"rustls-tls",
	"cookies",
] }
serde_json = "1.0.61"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.24"
argon2 = { version = "0.4", features = ["std"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.18"

[dev-dependencies]
claims = "0.7.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
once_cell = "1"
wiremock = "0.5"
linkify = "0.9"
serde_urlencoded = "0.7.1"
